Börjar på metod för att visa alla medlemmar

--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -9,6 +9,7 @@
 		<div id="container">
 			
 			<input type="button" value="Lägg till ny medlem" id="addMember">
+			<input type="button" value="Visa registrerade medlemmar" id="showMembers">
 			
 			
 			
