Trail and error
Testar omkring nu. Försöker rätta till lite problem som uppstått...

--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -5,7 +5,7 @@
 		<title>SCRUM - Medlemsregister</title>
 		<link rel="stylesheet" href="css/style.css" >
 	</head>
-	<body>
+	<body id="body">
 		<div id="container">
 			
 			<input type="button" value="Lägg till ny medlem" id="addMember">
