Avslutar dag 1 sprint 1

--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -14,7 +14,7 @@
 			
 			
 		</div>
-			<form id="regform">
+			<form id="regform" action="data.txt" method="post">
 				<fieldset>
 					<legend>Registrations Formulär</legend>
 					<label for="name">Namn</label>
