Snyggat till lite med CSS

--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -15,6 +15,7 @@
 			
 		</div>
 			<form id="regform" action="data.txt" method="post">
+				<h1>Lägg till ny medlem!</h1>
 				<fieldset>
 					<legend>Registrations Formulär</legend>
 					<label for="name">Namn</label>
