--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -10,6 +10,7 @@
 			
 			<input type="button" value="Lägg till ny medlem" id="addMember">
 			<input type="button" value="Visa registrerade medlemmar" id="showMembers">
+			<input type="button" value="Sök efter en medlem" id="findMember">
 			
 			
 			
