Sprint 2 arbetsdag 2 avklarad. Allt klart!
Allt är klart, nu ska jag bara skriva sprint review/retrospective sen är
jag 100% klar!

--- a/Medlemsregister/index.html
+++ b/Medlemsregister/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="css/style.css" >
 	</head>
 	<body id="body">
+		<div id="blocker">			
+		</div>
+		
 		<div id="container">
 			
 			<input type="button" value="Lägg till ny medlem" id="addMember">
